Fix overflow issue in contact panel

--- a/css/home.css
+++ b/css/home.css
@@ -152,21 +152,21 @@ li a:hover {
   transition: all 0.3s ease;
 }
 .contact .inner {
+  overflow: hidden;
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: hidden;
 }
 .contact .inner .panel.panel-right {
-  position: absolute;
+  position: relative;
   right: -30%;
   box-sizing: border-box;
   height: 100%;
   width: 100%;
-  float: left;
   transform: skew(-20deg);
+  overflow: hidden;
 }
 .contact .inner .panel .panel-content {
   position: absolute;
